samples/_failures_safe/1761539096_676f59_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8d850d79.c: In function ‘main’:
./samples/SAFE/__tmp_8d850d79.c:171:9: error: expected declaration or statement at end of input
  171 |         buffer_free(&decompressed);
      |         ^~~~~~~~~~~
./samples/SAFE/__tmp_8d850d79.c:171:9: error: expected declaration or statement at end of input
